--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ flutter:
   assets:
     - assets/icon.png
     - assets/person.png
+    - assets/logo.png
+    - assets/logo2.png
+    
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
